# deep-learning-project

./: LICENSE  README.md  feature-aware-training-curriculum.ipynb
contributions/2_contribution/: .gitignore  README.md  main.py  pkg_resources.py  pyproject.toml  reliance_protocol.py  requirements.txt  test.py  text_experiments.py  training.py  transform.py
contributions/2_contribution/conf/: datasets.yaml
contributions/2_contribution/data/computer_vision/: flowers.py  imagenet16.py  stl10.py
contributions/2_contribution/data/medical_imaging/: bloodmnist.py  chestmnist.py  dermamnist.py  pathmnist.py  retinamnist.py
contributions/2_contribution/lightning/: __init__.py
contributions/2_contribution/lightning/pytorch/: __init__.py
contributions/2_contribution/scripts/: download_aid_hf.py  download_coco_subset.py  finetune_clip_coco.py  finetune_clip_retinamnist.py  generate_retinamnist_captions.py  preprocess_deepglobe.py  test_coco_prompt_engineering.py  test_retinamnist_text.py
contributions/2_contribution/scripts/shell/: run_bloodmnist_finetunes.sh  run_bloodmnist_inference.sh  run_bloodmnist_shape_color_aug.sh  run_bloodmnist_shape_color_aug_inference.sh  run_coco_prompt_engineering.sh  run_deepglobe_color_texture_aug.sh  run_deepglobe_color_texture_inference.sh  run_deepglobe_finetunes.sh  run_deepglobe_inference.sh  run_stl10_finetunes.sh  run_stl10_inference.sh
contributions/2_contribution/scripts/windows/: run_bloodmnist_finetunes.bat  run_bloodmnist_inference.bat  run_bloodmnist_shape_color_aug.bat  run_bloodmnist_shape_color_aug_inference.bat  (+7 more)
(+6 files in other folders)
